deployment-upload-file/deploy-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-upload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: upload
    spec:
      containers:
      - name: upload
        image: docker.nimtechnology.com/dockerhub/adrianlzt/docker-nginx-php-upload
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
