deployment-upload-file/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload
spec:
  clusterIP: None
  selector:
    app: upload
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
