deployment-upload-file/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload
spec:
  type: ClusterIP
  selector:
    app: upload
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
