deployment-upload-file/ingress-istio.yaml
---
# Source: istio/templates/gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - fleetman-webapp.nimtechnology.com
      port:
        name: http
        number: 80
        protocol: HTTP
---
# Source: istio/templates/virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  gateways:
    - ingress-gateway-configuration
  hosts:
    - fleetman-webapp.nimtechnology.com
  http:
    - name: fleetman-webapp.nimtechnology.com
      match:
        - uri:
            prefix: /
      route:
        - destination:
            host: upload
            port:
              number: 80
